--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<meta property="og:title" content="Chicken Fling"/>
 	<meta property="og:site_name" content="Chicken Fling"/>
-	<meta property="og:description" content="Fling Chuck the Chicken at the goal area!"/>
+	<meta property="og:description" content="Fling Chuck the Chicken at the goal area! Share/Options > Add to home screen for fullscreen app experience!"/>
 	<meta property="og:image" content="https://chickenfling.herokuapp.com/meta/screenshot.png"/>
 
 	<style>
