--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ window.addEventListener('orientationchange', doOnOrientationChange);
 
 </script>
 
+<script type="text/javascript">
+	if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) )
+ 		var mobile=true;
+ 	else
+ 		var mobile=false;
+
+</script>
 
 </head>
 
@@ -72,7 +79,10 @@ window.addEventListener('orientationchange', doOnOrientationChange);
 //0,0 is top left in Canvas
 var mobileRatio = 9/16;
 var height = window.innerHeight-3;
-var width=height / (9/16) + 16;
+if(!mobile)
+	var width=height / (9/16) + 16;
+else
+	var width=window.innerWidth;
 
 var player={};
 var gravity=height*0.001;
